# datalake-federated-engineers-portal-backend

./: .dockerignore  .editorconfig  .env.dist  .gitignore  CODEOWNERS  Changelog.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  tsconfig.base.json
.github/: pull_request_template.md
.github/workflows/: entrypoint-feature.yaml  entrypoint-main.yaml  pr.yaml  reusable-build-deploy-docker-image.yaml  reusable-check-package-version-bumping.yaml  reusable-deploy-infra.yaml  reusable-get-application-changes.yaml  reusable-get-files-with-changes.yaml  reusable-get-infra-changes.yaml  reusable-run-mypy.yaml  reusable-test-poetry-package.yaml
dependency_injection/: container.py  fast_api.py  resources.py
docs/assets/drawio/: cognito-solution-4+1-diagram.drawio
docs/images/raw/: process_of_token_exchanges.bpmn
infra/federated-engineers-portal/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
infra/federated-engineers-portal/app/: cognito.ts
infra/federated-engineers-portal/app/cognito/: stack.ts
infra/federated-engineers-portal/app/permissions/: policy-creation.ts
infra/federated-engineers-portal/app/pre_token_generation_lambda/: dev_requirements.txt
infra/federated-engineers-portal/app/pre_token_generation_lambda/src/: main.py  models.py
infra/federated-engineers-portal/app/pre_token_generation_lambda/tests/: test_lambda.py
jinja_templates/: base.html  home.html  welcome.html
models/: enums.py  users.py
services/: aws_console.py  cognito.py  secrets.py  tokens.py
src/: .dockerignore  .editorconfig  Changelog.md  main.py  pyproject.toml
src/dependency_injection/: fast_api.py
src/docs/: login_process.md
src/docs/assets/drawio/: cognito-solution-4+1-diagram.drawio
src/models/: pkce.py
src/services/: aws_console.py  cache.py  secrets.py  sessions.py
src/tests/: conftest.py
tests/: conftest.py
tests/services/: test_cognito.py  test_cognito_service.py
utils/: urls.py
