[tool.poetry]
name = "federated-engineers-portal-backend"
version = "0.1.0"
description = "A login portal for federated engineers to do their work"
authors = ["Ben van der Harg <ben.j.van.der.harg@postnl.nl>"]
readme = "README.md"
packages = [{include = "federated_engineers_portal_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
toml = "^0.10.2"
uvicorn = "^0.29.0"
dependency-injector-fork = "^4.42.1"
boto3 = "^1.34.109"
dogpile-cache = "^1.3.3"
redis = "^5.0.4"
requests = "^2.32.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
jinja2 = "^3.1.4"
boto3-stubs = {extras = ["cognito-identity", "cognito-idp", "secretsmanager", "sts"], version = "^1.34.109"}
botocore-stubs = "^1.34.94"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.9.0"
types-requests = "^2.31.0.20240406"
types-toml = "^0.10.8.20240310"
types-python-jose = "^3.3.4.20240106"

[tool.mypy]
explicit_package_bases = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
